add controller vote and send message to kafka

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,12 +20,16 @@ spring:
   sql:
     init:
       platform: mariadb
-springdoc:
-  paths-to-match: /ruling/**/
-  swagger-ui:
-    use-root-path: true
+  batch:
+    jdbc:
+      isolation-level-for-create:
   kafka:
     producer:
-      bootstrap-servers: 127.0.0.1:9092
+      bootstrap-servers: 127.0.0.1:9093
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+springdoc:
+  paths-to-match: /voteRecord/**/
+  swagger-ui:
+    use-root-path: true
